# cctheme

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Readme.md  build.sh  clang-toolchain.cmake  ct-build  main.cpp  stdafx.h
data/schemes/: Readme.md  Solarized.light.json  SolarizedDark.json
data/scripts/: gnome-terminal.sh
data/templates/: _gnome-terminal.sh  gnome-terminal.sh
data/themes/3024.dark/: gnome-terminal.sh
data/themes/3024.light/: gnome-terminal.sh
data/themes/Solarized.dark/: gnome-terminal.sh
data/themes/ashes.dark/: gnome-terminal.sh
data/themes/ashes.light/: gnome-terminal.sh
data/themes/atelierdune.dark/: gnome-terminal.sh
data/themes/atelierdune.light/: gnome-terminal.sh
data/themes/atelierforest.dark/: gnome-terminal.sh
data/themes/atelierforest.light/: gnome-terminal.sh
data/themes/atelierheath.dark/: gnome-terminal.sh
data/themes/atelierheath.light/: gnome-terminal.sh
data/themes/atelierlakeside.dark/: gnome-terminal.sh
data/themes/atelierlakeside.light/: gnome-terminal.sh
data/themes/atelierseaside.dark/: gnome-terminal.sh
data/themes/atelierseaside.light/: gnome-terminal.sh
data/themes/bespin.dark/: gnome-terminal.sh
data/themes/bespin.light/: gnome-terminal.sh
data/themes/brewer.dark/: gnome-terminal.sh
data/themes/brewer.light/: gnome-terminal.sh
data/themes/chalk.dark/: gnome-terminal.sh
data/themes/chalk.light/: gnome-terminal.sh
data/themes/codeschool.dark/: gnome-terminal.sh
data/themes/codeschool.light/: gnome-terminal.sh
data/themes/default.dark/: gnome-terminal.sh
data/themes/default.light/: gnome-terminal.sh
data/themes/eighties.dark/: gnome-terminal.sh
data/themes/eighties.light/: gnome-terminal.sh
data/themes/embers.dark/: gnome-terminal.sh
data/themes/embers.light/: gnome-terminal.sh
data/themes/google.dark/: gnome-terminal.sh
data/themes/google.light/: gnome-terminal.sh
data/themes/grayscale.dark/: gnome-terminal.sh
data/themes/grayscale.light/: gnome-terminal.sh
data/themes/greenscreen.dark/: gnome-terminal.sh
data/themes/greenscreen.light/: gnome-terminal.sh
data/themes/isotope.dark/: gnome-terminal.sh
data/themes/isotope.light/: gnome-terminal.sh
data/themes/londontube.dark/: gnome-terminal.sh
data/themes/londontube.light/: gnome-terminal.sh
data/themes/marrakesh.dark/: gnome-terminal.sh
data/themes/marrakesh.light/: gnome-terminal.sh
data/themes/mocha.dark/: gnome-terminal.sh
data/themes/mocha.light/: gnome-terminal.sh
data/themes/monokai.dark/: gnome-terminal.sh
data/themes/monokai.light/: gnome-terminal.sh
data/themes/ocean.dark/: gnome-terminal.sh
data/themes/ocean.light/: gnome-terminal.sh
data/themes/paraiso.dark/: gnome-terminal.sh
data/themes/paraiso.light/: gnome-terminal.sh
data/themes/railscasts.dark/: gnome-terminal.sh
data/themes/railscasts.light/: gnome-terminal.sh
data/themes/shapeshifter.dark/: gnome-terminal.sh
data/themes/shapeshifter.light/: gnome-terminal.sh
data/themes/solarized.light/: gnome-terminal.sh
data/themes/tomorrow.dark/: gnome-terminal.sh
data/themes/tomorrow.light/: apply.sh  gnome-terminal.sh
data/themes/twilight.dark/: gnome-terminal.sh
data/themes/twilight.light/: gnome-terminal.sh
ext/: fetch_libs.sh
src/: CMakeLists.txt  compile.cpp  config.h.in  cthemegen.cpp  main.cpp  tty_colors.h  utils.cpp  utils.h
src/ccthemegen/: CMakeLists.txt  ccthemegen.cpp  colors-test.cpp  compile.cpp  compile_helpers.cpp  compile_helpers.h  config.h.in  utils.h
src/cthemegen/: CMakeLists.txt  color_conv.cpp  colors-test.cpp  colors.cpp  colors.h  compile.cpp  named_colors.cpp
src/ext/: fetch_libs.sh  inja.hpp
src/ext/cpp-colors/: CMakeLists.txt  README.md
src/ext/cpp-colors/include/: color.h  color_error.h  color_io.h  color_named.h  color_utils.h  colors.h  pixel_format.h  pixel_utils.h
src/ext/cpp-colors/include/impl/: colors_impl.h  constants_impl.h  named_impl.h  named_utils.h
src/ext/cpp-colors/include/impl/dotnet/: dotnet_colors.h  dotnet_constants.h  dotnet_named.h
src/ext/cpp-colors/include/impl/wpf/: wpf_colors.h  wpf_constants.h  wpf_named.h
src/ext/cpp-colors/include/impl/x11/: x11_colors.h  x11_constants.h  x11_named.h
src/libcolor/: CMakeLists.txt  colors-test.cpp  colors.cpp  colors.h
support/: X11_colors.sh  clang-toolchain.cmake  copyright-header.sh  install_clang.sh  install_cmake.sh  svg_compile_helper.sh
support/cmake/: cotire.cmake  git_revision.cmake
support/svg/: install_icons.sh
